# novel_comic_project

./: README.md  RENDME.md  pyproject.toml  requirements.txt
data/: novel.txt  reference_images.yaml
output/: comic_panels_draft.yaml  final_comic_data_with_images.json  generated_comic_data.json  my_edited_panels.yaml
scripts/: generate_reference_images_yaml.py
src/: __init__.py  api_client.py  cli.py  comic_generator.py  utils.py
